[tool.poetry]
name = "work-with-reddit-com"
version = "0.1.0"
description = ""
authors = ["denis sergeevich pekshev <pekshev.ds@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"
python-dotenv = {extras = ["cli"], version = "^1.0.1"}
pydantic = "^2.9.2"
httpx = "^0.27.2"

[tool.poetry.group.linters.dependencies]
mypy = "^1.11.2"

[tool.poetry.group.testers.dependencies]
pytest = "^8.3.3"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"